Major solution page changes added

--- a/anti-money-laundering-system.html
+++ b/anti-money-laundering-system.html
@@ -167,10 +167,6 @@
                                       <div class="row footer-bottom-content nav-bottom-line-effect-10 collapse d-md-flex">
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
                                           <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
-                                            href="javascript:void(0)">ROBO <br class="d-none d-sm-block" /> ADVISORY</a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
-                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
                                             href="javascript:void(0)">CROWD <br class="d-none d-sm-block" /> FUNDING</a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
@@ -178,6 +174,11 @@
                                             href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
                                             TRANSFORMATION</a>
                                         </div>
+                                        <!-- <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
+                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
+                                            href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
+                                            TRANSFORMATION</a>
+                                        </div> -->
                                       </div>
                                     </div>
                                   </div>
@@ -398,15 +399,14 @@
         </div>
       </section>
 
-      <section class="section border-0 m-0 bg-gradient-primary-light-1" id="tab-global-reach">
+      <section class="section border-0 m-0 bg-gradient-primary-darkest overflow-hidden">
         <div class="container-fluid">
           <div class="row align-items-center">
-            <div class="col-lg-4 d-none d-lg-block">
-              <img src="img/solutions/AML/AML - F2B Compliance.png" class="img-fluid solution-infobox-image-left" alt="trade-screen" style="left: -12%;" />
+            <div class="col-lg-3 d-none d-lg-block pl-md-0 feature-banner-flex">
+              <img src="img/solutions/AML/AML Header-F2B-C.png" class="img-fluid w-100" alt="trade-screen" />
             </div>
-            <div class="col-lg-7">
-              <p class="line-height-2 text-4 text-color-light mb-md-2">Our Anti-money Laundering (AML) / Surveillance system comprises legal controls that require financial institutions and other regulated entities to prevent, detect, and report money laundering activities.</p>
-              <p class="line-height-2 text-4 text-color-light mb-md-3">With fuzzy-logic, sophisticated KYC controls are defaulted into the system for name capture and transactional data surveillance. DFN-AML has an industry-standard workflow build with detailed Risk Profiles allowing the surveillance engine to detect, prevent, and report money laundering activities. Providing all as required by investment management-house risk managers.</p>
+            <div class="col-lg-7 offset-lg-1">
+              <p class="line-height-2 text-4 text-color-light mb-md-2">Our Anti-money Laundering (AML) / Surveillance system comprises legal controls that require financial institutions and other regulated entities to prevent, detect, and report money laundering activities. With fuzzy-logic, sophisticated KYC controls are defaulted into the system for name capture and transactional data surveillance. DirectFN's AML has an industry-standard workflow build with detailed Risk Profiles allowing the surveillance engine to detect, prevent, and report money laundering activities, providing what is most required by investment management-house risk managers.</p>
               <div class="row mb-5">
                 <div class="col-md-4">
                   <ul class="list list-icons list-icons-style-3">
@@ -432,10 +432,10 @@
               <div class="text-right">
                 <a class="btn btn-default text-uppercase alternative-font-2 btn-sm text-color-dark">Schedule a Demo <i
                     class="fas fa-arrow-right ml-2 text-color-primary"></i></a>
-              </div>
             </div>
           </div>
         </div>
+      </div>
       </section>
 
       <section class="section bg-color-light border-0 m-0 pb-0">
@@ -474,7 +474,7 @@
                       </div>
                     </div>
 
-                    <hr style="background: #fff; height: 30px;">
+                    <hr style="background: #fff; height: 110px;">
                     
                     <div class="container" id="dealer-terminal">
                       <div class="row align-items-center justify-content-center justify-content-lg-between align-items-lg-start py-5">
@@ -525,12 +525,10 @@
                   SCHEDULE A DEMO
                 </p>
                 <p class="h2 font-weight-light line-height-1 ls-0 mb-3 text-dark">
-                  Tap into our wealth of experience and expertise
+                  Tap into our wealth of experience and expertise.
                 </p>
                 <p class="font-weight-light line-height-2 text-4 text-dark">
-                  Schedule a chat with one of our representatives to learn more about our Brokerage Management System
-                  and all its features
-                </p>
+                  Schedule a chat with one of our representatives to learn more about our Anti-Money Laundering Management System and all of its features.</p>
               </div>
             </div>
           </div>
