--- a/index.html
+++ b/index.html
@@ -179,10 +179,6 @@
                                       <div class="row footer-bottom-content nav-bottom-line-effect-10 collapse d-md-flex">
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
                                           <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
-                                            href="javascript:void(0)">ROBO <br class="d-none d-sm-block" /> ADVISORY</a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
-                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
                                             href="javascript:void(0)">CROWD <br class="d-none d-sm-block" /> FUNDING</a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
@@ -190,6 +186,11 @@
                                             href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
                                             TRANSFORMATION</a>
                                         </div>
+                                        <!-- <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
+                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
+                                            href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
+                                            TRANSFORMATION</a>
+                                        </div> -->
                                       </div>
                                     </div>
                                   </div>
@@ -450,8 +451,8 @@
               <h2 class="alternative-font-2 font-weight-extra-bold text-color-light text-13 mt-2">FinTECH <button class="collapse-menu-icon-plus d-md-none"><span></span><span></span></button></h2>
               <p class="text-4 text-color-light line-height-3">Advanced end to end technical solutions targeted towards established Institutional Members and startups alike with integrative and front to back architectural deployment.</p>
               <div class="d-md-block d-none description-section">
-              <ul class="footer-bottom-content">
-                <li class="line-height-2 mb-3">
+              <ul class="footer-bottom-content nav-bottom-line-effect-10 absolute-top">
+                <li class="line-height-2 mb-3 overflow-hidden">
                   <a class="alternative-font-2 text-4 text-color-light font-weight-light" href="brokerage-management-system.html">BROKERAGE <br /> MANAGEMENT</a>
                 </li>
                 <li class="line-height-2 mb-3">
@@ -478,14 +479,14 @@
                   <p>
                   <ul class="footer-bottom-content">
                     <li class="line-height-2 mr-4 pr-1 pr-sm-2">
-                      <a class="alternative-font-2 text-4 text-color-light font-weight-light" href="javascript:void(0)">ROBO <br /> ADVISORY</a>
+                      <a class="alternative-font-2 text-4 text-color-light font-weight-light">CROWD <br /> FUNDING</a>
                     </li>
                     <li class="line-height-2 mr-4 pr-1 pr-sm-2">
-                      <a class="alternative-font-2 text-4 text-color-light font-weight-light" href="javascript:void(0)">CROWD <br /> FUNDING</a>
+                      <a class="alternative-font-2 text-4 text-color-light font-weight-light">DIGITAL <br /> TRANSFORMATION</a>
                     </li>
-                    <li class="line-height-2">
-                      <a class="alternative-font-2 text-4 text-color-light font-weight-light" href="client-relationship-management-system.html">DIGITAL <br /> TRANSFORMATION</a>
-                    </li>
+                    <!-- <li class="line-height-2">
+                      <a class="alternative-font-2 text-4 text-color-light font-weight-light" href="client-relationship-management-system.html"></a>
+                    </li> -->
                   </ul>
                 </p>
                 </div>
@@ -524,7 +525,7 @@
               <h2 class="alternative-font-2 font-weight-extra-bold text-color-light text-13 mt-2">FinREG <button class="collapse-menu-icon-plus d-md-none"><span></span><span></span></button></h2>
               <p class="text-4 text-color-light line-height-3">Innovative regulatory, risk and supervisory technology and service offerings that range from consulting, integrative and managed end to end solutions, to specialist reporting software and ongoing training.</p>
               <div class="d-md-block d-none description-section">
-              <ul class="footer-bottom-content">
+              <ul class="footer-bottom-content nav-bottom-line-effect-10 absolute-top">
                 <li class="line-height-2 mb-3">
                   <a class="alternative-font-2 text-4 text-color-light font-weight-light" href="anti-money-laundering-system.html">ANTI-MONEY <br /> LAUNDERING</a>
                 </li>
@@ -543,10 +544,10 @@
                   <p>
                   <ul class="footer-bottom-content mb-3">
                     <li class="line-height-2 line-height-2 mr-4 pr-1 pr-sm-2 ml-2 pl-1 finreg-landing-page-mp-none-left">
-                      <a class="alternative-font-2 text-4 text-color-light font-weight-light" href="javascript:void(0)">GENERAL <br /> CLEARING <br /> MEMBER</a>
+                      <a class="alternative-font-2 text-4 text-color-light font-weight-light">GENERAL <br /> CLEARING <br /> MEMBER</a>
                     </li>
                     <li class="line-height-2">
-                      <a class="alternative-font-2 text-4 text-color-light font-weight-light" href="javascript:void(0)">PTTP <br /> COMPLIANCE <br /> MANAGEMENT</a>
+                      <a class="alternative-font-2 text-4 text-color-light font-weight-light">PTTP <br /> COMPLIANCE <br /> MANAGEMENT</a>
                     </li>
                   </ul>
                 </p>
