--- a/order-execution-management-system.html
+++ b/order-execution-management-system.html
@@ -167,10 +167,6 @@
                                       <div class="row footer-bottom-content nav-bottom-line-effect-10 collapse d-md-flex">
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
                                           <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
-                                            href="javascript:void(0)">ROBO <br class="d-none d-sm-block" /> ADVISORY</a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
-                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
                                             href="javascript:void(0)">CROWD <br class="d-none d-sm-block" /> FUNDING</a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
@@ -178,6 +174,11 @@
                                             href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
                                             TRANSFORMATION</a>
                                         </div>
+                                        <!-- <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
+                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
+                                            href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
+                                            TRANSFORMATION</a>
+                                        </div> -->
                                       </div>
                                     </div>
                                   </div>
@@ -398,13 +399,13 @@
         </div>
       </section>
 
-      <section class="section border-0 m-0 bg-gradient-primary-light-1" id="tab-global-reach">
+      <section class="section border-0 m-0 bg-gradient-primary-light-1 overflow-hidden">
         <div class="container-fluid">
           <div class="row align-items-center">
-            <div class="col-lg-4 d-none d-lg-block">
-              <img src="img/solutions/OMS/OMS - F2B - Scalability.png" class="img-fluid solution-infobox-image-left" alt="trade-screen" style="left: -12%;" />
+            <div class="col-lg-3 d-none d-lg-block pl-md-0 feature-banner-flex">
+              <img src="img/solutions/OMS/OMS-EMS Header-F2B-S.png" class="img-fluid w-100" alt="trade-screen" />
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 offset-lg-1">
               <p class="line-height-2 text-4 text-color-light mb-md-5">Our Execution Management System offers Real-Time Trading, access to Market Data and Analytics across multiple trading venues with algorithmic support. Although at the core of EMS is an architecture based upon our industry-standard Order Management System, it is 50 times faster and can now perform 1000 executions per second per node.</p>
               <div class="row mb-5">
                 <div class="col-md-4">
@@ -430,7 +431,7 @@
                 <a class="btn btn-default text-uppercase alternative-font-2 btn-sm text-color-dark">Schedule a Demo <i
                     class="fas fa-arrow-right ml-2 text-color-primary"></i></a>
               </div>
-            </div>
+          </div>
           </div>
         </div>
       </section>
@@ -514,8 +515,8 @@
           </div>
         </div>
     </section>
-
-    <section id="why-choose-us" class="section bg-color-light border-0 m-0 pb-0">
+    <hr class="mb-0" style="background: #fff; height: 110px;">
+    <section id="why-choose-us" class="section bg-color-light border-0 m-0 py-0">
       <div class="container bg-color-grey">
         <div class="row align-items-center justify-content-center justify-content-lg-between">
           <div class="col-lg-8 order-lg-1 pt-5 pb-5 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
@@ -523,14 +524,14 @@
               <span class="text-color-primary">cache based</span>  Architecture
             </h2>
             
-            <p class="text-4 line-height-3 mb-5">DIRECTFN EMS runs on a cache architecture, rather than a traditional DB driven model, enhancing throughput and scalability.</p>
+            <p class="text-4 line-height-3 mb-5">DirectFN's EMS runs on a cache architecture, rather than a traditional DB driven model, enhancing throughput and scalability.</p>
           </div>
-          <div class="col-9 offset-lg-1 col-lg-3 order-lg-2 scale-md-2 d-lg-block d-none">
-            <img class="img-fluid my-2 solution-infobox-image-right" src="img/solutions/OMS/Webp.net-resizeimage.png" alt="">
+          <div class="col-9 offset-lg-1 col-lg-3 order-lg-2 d-lg-block d-none">
+            <img class="img-fluid solution-infobox-image-right" src="img/solutions/OMS/50x faster than OMS.png" alt="">
           </div>
         </div>
       </div>
-      <hr class="mb-0" style="background: #fff; height: 30px;">
+      <hr class="mb-0" style="background: #fff; height: 110px;">
     </section>
     
     <section class="section bg-color-light border-0 m-0 pb-0 pt-2">
@@ -569,12 +570,10 @@
                     SCHEDULE A DEMO
                   </p>
                   <p class="h2 font-weight-light line-height-1 ls-0 mb-3 text-dark">
-                    Tap into our wealth of experience and expertise
+                    Tap into our wealth of experience and expertise.
                   </p>
                   <p class="font-weight-light line-height-2 text-4 text-dark">
-                    Schedule a chat with one of our representatives to learn more about our Brokerage Management System
-                    and all its features
-                  </p>
+                    Schedule a chat with one of our representatives to learn more about our Order & Execution Management System and all of its features.</p>
                 </div>
               </div>
             </div>
