--- a/slider-news-insight.html
+++ b/slider-news-insight.html
@@ -179,10 +179,6 @@
                                       <div class="row footer-bottom-content nav-bottom-line-effect-10 collapse d-md-flex">
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
                                           <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
-                                            href="javascript:void(0)">ROBO <br class="d-none d-sm-block" /> ADVISORY</a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
-                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
                                             href="javascript:void(0)">CROWD <br class="d-none d-sm-block" /> FUNDING</a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
@@ -190,6 +186,11 @@
                                             href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
                                             TRANSFORMATION</a>
                                         </div>
+                                        <!-- <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
+                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
+                                            href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
+                                            TRANSFORMATION</a>
+                                        </div> -->
                                       </div>
                                     </div>
                                   </div>
