--- a/custody-management-system.html
+++ b/custody-management-system.html
@@ -167,10 +167,6 @@
                                       <div class="row footer-bottom-content nav-bottom-line-effect-10 collapse d-md-flex">
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
                                           <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
-                                            href="javascript:void(0)">ROBO <br class="d-none d-sm-block" /> ADVISORY</a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
-                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
                                             href="javascript:void(0)">CROWD <br class="d-none d-sm-block" /> FUNDING</a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
@@ -178,6 +174,11 @@
                                             href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
                                             TRANSFORMATION</a>
                                         </div>
+                                        <!-- <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
+                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
+                                            href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
+                                            TRANSFORMATION</a>
+                                        </div> -->
                                       </div>
                                     </div>
                                   </div>
@@ -398,41 +399,41 @@
         </div>
       </section>
 
-      <section class="section border-0 m-0 bg-gradient-primary-light-1" id="tab-global-reach">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 d-none d-lg-block">
-              <img src="img/solutions/CMS/CMS - Header.png" class="img-fluid image-aligned-portion left-img" alt="trade-screen" style="left: -50%;" />
+      <section class="section border-0 m-0 bg-gradient-primary-light-1 overflow-hidden">
+        <div class="container-fluid">
+          <div class="row align-items-center">
+            <div class="col-lg-4 d-none d-lg-block pl-md-0 feature-banner-flex-laptop  scale-lg-4 scale-xl-3">
+              <img src="img/solutions/CMS/CMS - Header.png" class="img-fluid image-aligned-portion left-img w-100" alt="trade-screen" />
             </div>
-            <div class="col-lg-8">
-              <p class="line-height-2 text-4 text-color-light mb-md-5">At the core of DFN:CMS is a practical straight-thru automation; with DirectFN Software Applications as an out-of-the-box product facilitating key custodian activities viz. clearing, settlement, safekeeping and announcements capturing. Bringing industry-standard processes as fully automated workflows with end-to-end transparency and efficiency.</p>
+            <div class="col-lg-6 offset-lg-1">
+              <p class="line-height-2 text-4 text-color-light mb-md-5">At the core of our CMS is a practical "straight through" automation as an out of the box product facilitating key custodian activities such as clearing, settlement, safekeeping and announcements capturing, thereby providing industry standard processes as fully automated workflows with end to end transparency and with the utmost efficiency.</p>
               <div class="row mb-5">
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-6 col-xl-4">
                   <ul class="list list-icons list-icons-style-3">
                     <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> Clearing & Settlement</li>
-					<li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> AUTOMATED Corporate ACTIONS</li>
-					<li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> SMART SAFE-KEEPING</li>
-					</ul>
-                </div>
-                <div class="col-md-4">
-                  <ul class="list list-icons list-icons-style-3">
-                    <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> DYNAMIC FEES STRUCTURE</li>
-					<li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> COUNTER-PARTY MANAGEMENT</li>
-					<li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> multi-ASSET CLASSES <p class="text-1 text-color-light line-height-1">including Equity, Debt, Real Estate & Funds</p></li>
-					</ul>
-                </div>
-                <div class="col-md-4">
-                  <ul class="list list-icons list-icons-style-3">
-                    <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> ANALYticS</li>
-                    <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> DYNAMIC MULTI-PARTY RECOn</li>
-					</ul>
-                </div>
+                    <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> AUTOMATED Corporate ACTIONS</li>
+                    <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> SMART SAFE-KEEPING</li>
+                    </ul>
+                          </div>
+                          <div class="col-md-6 col-lg-6 col-xl-4">
+                            <ul class="list list-icons list-icons-style-3">
+                              <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> DYNAMIC FEES STRUCTURE</li>
+                              <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> COUNTER-PARTY MANAGEMENT</li>
+                              <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> multi-ASSET CLASSES <p class="text-1 text-color-light line-height-1">including Equity, Debt, Real Estate & Funds</p></li>
+                              </ul>
+                          </div>
+                          <div class="col-md-6 col-lg-6 col-xl-4">
+                            <ul class="list list-icons list-icons-style-3">
+                              <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> ANALYticS</li>
+                              <li class="text-uppercase text-color-light alternative-font-2"><i class="fas fa-check"></i> DYNAMIC MULTI-PARTY RECOn</li>
+                            </ul>
+                          </div>
               </div>
               <div class="text-right">
                 <a class="btn btn-default text-uppercase alternative-font-2 btn-sm text-color-dark">Schedule a Demo <i
                     class="fas fa-arrow-right ml-2 text-color-primary"></i></a>
               </div>
-            </div>
+          </div>
           </div>
         </div>
       </section>
@@ -448,7 +449,7 @@
                       <div class="row align-items-center justify-content-center align-items-lg-start py-5">
                         <div class="col-lg-5 order-lg-1 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
                           <h2 class="font-weight-bold line-height-2 text-dark text-8 alternative-font-2">
-                            <span class="text-color-primary">DFN</span> CMS DASHBOARD
+                            <span class="text-color-primary">DFN CMS</span> DASHBOARD
 						  </h2>
 						  <p class="text-4 line-height-3 font-weight-bold">User-Dashboard for Investors/Brokers/Custodians</p>
               <div class="row">
@@ -477,84 +478,35 @@
                       </div>
                     </div>
 
-                    <hr style="background: #fff; height: 30px;">
+                    <hr style="background: #fff; height: 110px;">
                     
                     <div class="container" id="dealer-terminal">
                       <div class="row align-items-center justify-content-center align-items-lg-start py-5">
-                        <div class="col-lg-5 order-lg-1 pb-sm-5 pb-lg-0  appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
-                          <h2 class="font-weight-bold line-height-2 text-dark text-8 alternative-font-2 mb-3">
-                            <span class="text-color-primary">DFN</span> ADMIN TERMINAL
+                        <div class="col-lg-6 order-lg-1 pb-sm-5 pb-lg-0  appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
+                          <h2 class="font-weight-bold line-height-2 text-dark text-8 alternative-font-2">
+                            <span class="text-color-primary">DFN CMS</span> ADMIN TERMINAL
                           </h2>
-                          <p class="text-4 text-color-primary line-height-3 alternative-font-2 text-uppercase">Full Middle Office to Back Office Automation</p>
+                          
                           <div class="row">
                             <div class="col-md-6">
                               <ul class="list list-icons list-icons-style-3">
-                                <li class="text-color-dark alternative-font-2"><i class="fas fa-check"></i> CUSTOMER MANAGEMENT</li>
-                                <li class="text-color-dark alternative-font-2"><i class="fas fa-check"></i> CASH MANAGEMENT</li>
-                                <li class="text-color-dark alternative-font-2"><i class="fas fa-check"></i> OPERATION MODULE</li>
+                                <li class="text-color-dark alternative-font-2 text-uppercase"><i class="fas fa-check"></i> Authority Management</li>
+                                <li class="text-color-dark alternative-font-2 text-uppercase"><i class="fas fa-check"></i> Dynamic Fee and Commissions</li>
+                                <li class="text-color-dark alternative-font-2 text-uppercase"><i class="fas fa-check"></i> Assets Entry Details</li>
                               </ul>
                             </div>
 
                             <div class="col-md-6">
                               <ul class="list list-icons list-icons-style-3">
-                                <li class="text-color-dark alternative-font-2"><i class="fas fa-check"></i> FINANCE | ACCOUNTING GL</li>
-                                <li class="text-color-dark alternative-font-2"><i class="fas fa-check"></i> EXECUTION MANAGEMENT</li>
-                                <li class="text-color-dark alternative-font-2"><i class="fas fa-check"></i> REPORTING MODULE</li>
+                                <li class="text-color-dark alternative-font-2 text-uppercase"><i class="fas fa-check"></i> Detailed Audit Log</li>
+                                <li class="text-color-dark alternative-font-2 text-uppercase"><i class="fas fa-check"></i> Multi-Level Charges Definition</li>
+                                <li class="text-color-dark alternative-font-2 text-uppercase"><i class="fas fa-check"></i> Corporate Action Receiving</li>
                               </ul>
-                            </div>
-                          </div>
-                          <p class="text-4 line-height-3">AT is a complete client-side terminal of the DFN-OMS aimed at supporting and automating completely the Back-Office workflows.</p>
-                          <p class="text-4 line-height-3">AT covers fully fledged Back-Office client automating, the Administrative and Back-Office work flows related to Customer Account Management, User Roles and Entitlements Management, Risk Parameter Management, Finance Management, Compliance, Reconciliation / Settlements and MIS Reporting.</p>
-                          <div class="row">
-                            <div class="col-md-6">
-								<ul class="pl-4">
-									<dt>Settlements Module</dt>
-									<dt>Corporate Actions Module</dt>
-									<dt>Holding Managements Module
-                    <ul>
-                      <li class="font-weight-normal">Holding Transfers</li>
-                      <li class="font-weight-normal">Pledge</li>
-                    </ul>
-                  </dt>
-									<dt>Cash Management Module
-                    <ul>
-                      <li class="font-weight-normal">Cash In</li>
-                      <li class="font-weight-normal">Cash Out</li>
-                      <li class="font-weight-normal">Transfers</li>
-                    </ul>
-                  </dt>
-                  <dt>Reconciliation Module
-                    <ul>
-                      <li class="font-weight-normal">Bank to Broker (B2B)</li>
-                      <li class="font-weight-normal">Holding</li>
-                      <li class="font-weight-normal">Trade Reconciliation</li>
-                    </ul>
-                  </dt>
-								  </ul>
-                            </div>
-
-                            <div class="col-md-6">
-								<ul class="pl-4">
-									<dt>Administration Module
-                    <ul>
-                      <li class="font-weight-normal">Users</li>
-                      <li class="font-weight-normal">Dealers</li>
-                      <li class="font-weight-normal">Entitlements</li>
-                      <li class="font-weight-normal">Master Data</li>
-                    </ul>
-                  </dt>
-									<dt>Comprehensive Reporting
-                    <ul>
-                      <li class="font-weight-normal">Pre-created desired reports (all areas)</li>
-                      <li class="font-weight-normal">Download facility to a variety of file formats.</li>
-                    </ul>
-                  </dt>
-								  </ul>
                             </div>
                           </div>
                         </div>
-                        <div class="col-9 col-lg-7 order-lg-2">
-                          <img class="img-fluid my-2 border-radius" src="img/solutions/CMS/XDR Mockup AT White.png" alt="">
+                        <div class="col-9 col-lg-6 order-lg-2">
+                          <img class="img-fluid my-2 border-radius" src="img/solutions/CMS/CMS-Admin Portal.png" alt="">
                         </div>
                       </div>
                     </div>
@@ -577,12 +529,10 @@
                   SCHEDULE A DEMO
                 </p>
                 <p class="h2 font-weight-light line-height-1 ls-0 mb-3 text-dark">
-                  Tap into our wealth of experience and expertise
+                  Tap into our wealth of experience and expertise.
                 </p>
                 <p class="font-weight-light line-height-2 text-4 text-dark">
-                  Schedule a chat with one of our representatives to learn more about our Brokerage Management System
-                  and all its features
-                </p>
+                  Schedule a chat with one of our representatives to learn more about our Custody Management System and all of its features.</p>
               </div>
             </div>
           </div>
