New Image Added in BMS

--- a/brokerage-management-system.html
+++ b/brokerage-management-system.html
@@ -516,7 +516,7 @@
                           </ul>
                         </div>
                         <div class="col-9 col-lg-7 order-lg-2">
-                          <img class="img-fluid my-2 border-radius w-100" src="img/solutions/BMS/BMS - Pro 11.png" alt="">
+                          <img class="img-fluid my-2 border-radius w-100" src="img/solutions/BMS/XDR Mockup Pro 11 - Market Overview.png" alt="">
                         </div>
                       </div>
                     </div>
